Additional html and css added for rest of my portfolio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          <a href="#">Home</a>
          <a href="#aboutMeId">About Me</a>
          <a href="#">Project</a>
-         <a href="#">Contact Me</a>
+         <a href="#contactId">Contact Me</a>
       </div>
    </header>
    <!-- Navigation end -->
@@ -69,5 +69,101 @@
       
    </section>
    <!-- About me end -->
+   <br>
+   <!-- Experience start -->
+   <section class="Experience">
+      <div class="work col=4">
+         <div class="card">
+            <div class="cardIcon"><i class="fa-solid fa-briefcase"></i></div>
+            
+            <div class="cardTitle"><h2>Work Experience</h2></div>
+            <div class="cardDesc">
+               <strong>Student Worker</strong><br>
+               01/04/2023 - contunue <br>
+               Work for web development using HTML-5, CSS, Bootstrap, Java Script, React, Node js, Mongo DB, Express js etc.
+
+            </div>
+         </div>
+      </div>
+      <div class="work col=4">
+         <div class="card">
+            <div class="cardIcon"><i class="fa-solid fa-user-graduate"></i></div>
+            <div class="cardTitle"><h2>Education and Training</h2></div>
+            <div class="cardDesc">
+               <ol>
+                  <li>
+                     <strong>Batchelor of Science in Electrical and Electronics Engineering (EEE)</strong><br>
+                     North South University<br>
+                     Bashundhara, Dhaka, Bangladesh. <br>
+                     Department: Electrical and Computer Engineering. <br>
+                     CGPA: 3.17 out 4.
+                  </li>
+                  <li>
+                     <strong>Traning program: B-MEET</strong><br>
+                     Time: May 2023, one month.
+                  </li>
+               </ol>
+            </div>
+         </div>
+      </div>
+      <div class="work col=4">
+         <div class="card">
+            <div class="cardIcon"><i class="fa-solid fa-lightbulb"></i></div>
+            <div class="cardTitle"><h2>Skills</h2></div>
+            <div class="cardDesc">
+               <div class="skillContainer">
+                  <ul>
+                     <li class="html">HTML</li>
+                     <li class="html">CSS</li>
+                     <li class="html">C++</li>
+                     <li class="html">Python</li>
+                     <li class="html">Java</li>
+                     <li class="html">Java Script</li>
+                     <li class="html">Git</li>
+                     <li class="html">MatLab</li>
+                     <li class="html">Bootstrap</li>
+                     <li class="html">Cadence</li>
+                  </ul>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <!-- Experience start -->
+
+   <!-- Contact start -->
+   <section class="contact" id="contactId">
+      <div class="contactMe">
+         <h2>Contact Me</h2><br><hr>
+         <form action="mailto:khairul431743@gmail.com" method="post" enctype="text/plain">
+            <p><input type="text" name="name:" id="" placeholder="Enter Your Name"></p>
+            <p><input type="text" name="email:" id="" placeholder="Enter Email"></p>
+            <textarea name="message" col="30" rows="10" placeholder="Your Message Here"></textarea><br>
+            <button type="submit">Send</button>
+            <button type="reset">Reset</button>
+         </form>
+      </div>
+      <div class="contactMe">
+         <h2>More Way to Contact Me</h2><br><hr>
+         <a href="mailto:khairul431743@gmail.com" target="_blank"><i class="fa-regular fa-envelope"></i></a><br>
+         <a href="https://github.com/khairul-01" target="_blank"><i class="fa-brands fa-github"></i></a><br>
+         <a href="https://www.linkedin.com/in/khairul01/" target="_blank"><i class="fa-brands fa-linkedin"></i></a><br>
+      </div>
+   </section>
+   <!-- Contact end -->
+   <br>
+   <!-- Footer start -->
+   <footer class="footer">
+      <div class="footerMenu">
+         <a href="#">Home</a>
+         <a href="#aboutMeId">About Me</a>
+         <a href="#">Project</a>
+         <a href="#contactId">Contact Me</a>
+      </div>
+      <div class="footerCopy">
+         &copy; Khairul Alam 2023. Developed with <span style="color: red;">❤</span> by Khairul Alam.
+      </div>
+   </footer>
+   <!-- Footer end -->
 </body>
 </html>
